--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -231,8 +231,8 @@
                         android:id="@+id/allFood_recyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:scrollbars="horizontal"
+                        android:orientation="vertical"
+                        android:scrollbars="vertical"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/all_food_text" />
 
