--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/drawerLayout_add_food"
     android:layout_height="match_parent">
@@ -96,8 +97,8 @@
                 android:id="@+id/price_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
                 android:text="Price"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -106,39 +107,16 @@
 
             <EditText
                 android:id="@+id/price_s_size"
-                android:layout_width="270dp"
+                android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/bg_input_edit_text"
-                android:hint="Price of S size"
+                android:hint="Price S size"
+                android:textSize="13dp"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 app:layout_constraintStart_toStartOf="@+id/option_s_size"
                 app:layout_constraintTop_toBottomOf="@+id/option_s_size" />
-
-            <EditText
-                android:id="@+id/price_m_size"
-                android:layout_width="270dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/bg_input_edit_text"
-                android:hint="Price of M size"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                app:layout_constraintStart_toStartOf="@+id/price_s_size"
-                app:layout_constraintTop_toBottomOf="@+id/price_s_size" />
-
-            <EditText
-                android:id="@+id/price_l_size"
-                android:layout_width="270dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/bg_input_edit_text"
-                android:hint="Price of L size"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                app:layout_constraintStart_toStartOf="@+id/price_m_size"
-                app:layout_constraintTop_toBottomOf="@+id/price_m_size" />
 
             <TextView
                 android:id="@+id/sale_text"
@@ -169,7 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="132dp"
+                android:layout_marginTop="32dp"
                 android:text="Amount"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -178,39 +156,16 @@
 
             <EditText
                 android:id="@+id/amount_s_size"
-                android:layout_width="270dp"
+                android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/bg_input_edit_text"
-                android:hint="Amount of S size"
+                android:hint="Amount"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                app:layout_constraintStart_toStartOf="@+id/price_l_size"
-                app:layout_constraintTop_toBottomOf="@+id/price_l_size" />
-
-            <EditText
-                android:id="@+id/amount_m_size"
-                android:layout_width="270dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/bg_input_edit_text"
-                android:hint="Amount of M size"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                app:layout_constraintStart_toStartOf="@+id/amount_s_size"
-                app:layout_constraintTop_toBottomOf="@+id/amount_s_size" />
-
-            <EditText
-                android:id="@+id/amount_l_size"
-                android:layout_width="270dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/bg_input_edit_text"
-                android:hint="Amount of L size"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                app:layout_constraintStart_toStartOf="@+id/amount_m_size"
-                app:layout_constraintTop_toBottomOf="@+id/amount_m_size" />
+                android:textSize="13dp"
+                app:layout_constraintStart_toStartOf="@+id/price_s_size"
+                app:layout_constraintTop_toBottomOf="@+id/price_s_size" />
 
             <TextView
                 android:id="@+id/size_text"
@@ -255,7 +210,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="128dp"
+                android:layout_marginTop="32dp"
                 android:text="Food image"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -266,12 +221,12 @@
                 android:id="@+id/browse_button"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/btn_login"
                 android:text="Browse"
                 app:backgroundTint="@null"
-                app:layout_constraintStart_toStartOf="@+id/amount_l_size"
-                app:layout_constraintTop_toBottomOf="@+id/amount_l_size" />
+                app:layout_constraintStart_toStartOf="@+id/amount_s_size"
+                app:layout_constraintTop_toBottomOf="@+id/amount_s_size" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardview"
@@ -289,17 +244,6 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/img_pizza" />
             </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/file_image_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="18dp"
-                android:text="ImageName.png"
-                android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@+id/browse_button"
-                app:layout_constraintTop_toBottomOf="@id/amount_l_size" />
 
             <TextView
                 android:id="@+id/description_text"
