--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,6 +10,7 @@
     <LinearLayout
         android:layout_width="90dp"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
@@ -31,26 +31,6 @@
                 android:layout_gravity="center"
                 app:srcCompat="@drawable/ic_delete"
                 app:tint="@color/red" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/note_button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/white"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="4dp"
-            app:cardUseCompatPadding="true">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/ic_edit"
-                app:tint="@color/blue" />
 
         </androidx.cardview.widget.CardView>
 
@@ -106,9 +86,8 @@
                             android:id="@+id/foodName_textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="24dp"
-                            android:layout_marginLeft="24dp"
-                            android:layout_marginTop="24dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
                             android:text="Hamburger"
                             android:textColor="@color/plain_black"
                             android:textSize="20sp"
@@ -117,82 +96,82 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
 
-                        <LinearLayout
-                            android:id="@+id/linear_layout"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/size_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="center_horizontal"
-                                android:text="Size: "
-                                android:textAlignment="center"
-                                android:textColor="@color/plain_black"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/size_value"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="center_horizontal"
-                                android:text="S"
-                                android:textAlignment="center"
-                                android:textColor="@color/plain_black"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
                         <TextView
                             android:id="@+id/amount_textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
-                            android:text="Amount: "
+                            android:layout_marginTop="8dp"
+                            android:text="Amount S: "
                             android:textColor="@color/plain_black"
-                            android:textSize="20sp"
+                            android:textSize="17sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="@+id/foodName_textView"
                             app:layout_constraintTop_toBottomOf="@+id/foodName_textView" />
 
                         <TextView
-                            android:id="@+id/amount_value"
+                            android:id="@+id/amountS_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="1"
                             android:textColor="@color/plain_black"
-                            android:textSize="20sp"
+                            android:textSize="17sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toEndOf="@+id/amount_textView"
                             app:layout_constraintTop_toTopOf="@+id/amount_textView" />
 
                         <TextView
-                            android:id="@+id/price_textView"
+                            android:id="@+id/textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="84dp"
-                            android:layout_marginEnd="20dp"
-                            android:layout_marginRight="24dp"
-                            android:text="7.68"
+                            android:text="Amount M: "
                             android:textColor="@color/plain_black"
-                            android:textSize="25dp"
+                            android:textSize="17sp"
                             android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintStart_toStartOf="@+id/foodName_textView"
+                            app:layout_constraintTop_toBottomOf="@+id/amount_textView" />
+
+                        <TextView
+                            android:id="@+id/amountM_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="2"
+                            android:textColor="@color/plain_black"
+                            android:textSize="17sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toEndOf="@+id/amount_textView"
+                            app:layout_constraintTop_toBottomOf="@+id/amount_textView" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Amount L: "
+                            android:textColor="@color/plain_black"
+                            android:textSize="17sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="@+id/foodName_textView"
+                            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+                        <TextView
+                            android:id="@+id/amountL_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3"
+                            android:textColor="@color/plain_black"
+                            android:textSize="17sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toEndOf="@+id/amount_textView"
+                            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 
                         <ImageView
                             android:id="@+id/star_rating_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginEnd="5dp"
-                            app:layout_constraintEnd_toStartOf="@id/star_rating_text"
-                            app:layout_constraintTop_toTopOf="@id/star_rating_text"
+                            android:layout_marginStart="160dp"
+                            android:layout_marginTop="56dp"
+                            app:layout_constraintStart_toStartOf="@+id/foodName_textView"
+                            app:layout_constraintTop_toBottomOf="@+id/foodName_textView"
                             app:srcCompat="@drawable/ic_star"
                             app:tint="@color/yellow" />
 
@@ -201,85 +180,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginEnd="20dp"
+                            android:layout_marginStart="5dp"
                             android:text="4.6"
                             android:textColor="@color/plain_black"
                             android:textSize="20sp"
                             android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@id/foodName_textView" />
-
-
-                        <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="84dp"
-                            android:layout_marginEnd="2dp"
-                            android:layout_marginRight="2dp"
-                            android:text="$"
-                            android:textColor="@color/plain_black"
-                            android:textSize="25dp"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toStartOf="@+id/price_textView"
-                            app:layout_constraintHorizontal_bias="1.0"
-                            app:layout_constraintStart_toEndOf="@+id/amount_value"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintStart_toEndOf="@+id/star_rating_image"
+                            app:layout_constraintTop_toTopOf="@+id/star_rating_image" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/note_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:background="#E9E9E9"
-                    android:orientation="horizontal"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginRight="5dp"
-                        android:text="Note: "
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:textStyle="italic" />
-
-
-                    <EditText
-                        android:id="@+id/note_editText"
-                        android:layout_width="230dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:background="@drawable/bg_note_cart_item"
-                        android:hint="note something... "
-                        android:singleLine="true"
-                        android:textColor="@color/blue"
-                        android:textColorHint="@color/plain_blue"
-                        android:textSize="18dp"
-                        android:textStyle="italic" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="end">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginRight="25dp"
-                            app:srcCompat="@drawable/ic_edit"
-                            app:tint="@color/blue" />
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
